# energykit

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: anomaly.rst  benchmark.rst  cost.rst  datasets.rst  diagnose.rst  features.rst  forecast.rst  optimize.rst
energykit/: __init__.py  diagnose.py
energykit/anomaly/: __init__.py  detector.py
energykit/benchmark/: __init__.py  metrics.py
energykit/cost/: __init__.py  demand_charge.py  imbalance.py
energykit/datasets/: __init__.py  loaders.py
energykit/disaggregate/: __init__.py  nilm.py
energykit/features/: __init__.py  temporal.py
energykit/forecast/: __init__.py  load.py
energykit/optimize/: __init__.py  der.py
examples/: battery_optimization.py  diagnose_demo.py  quickstart.py
notebooks/: energykit-uci-household-financial-audit.ipynb
tests/: test_anomaly.py  test_cost.py  test_features.py  test_forecast.py  test_metrics.py  test_optimize.py
