[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energykit"
version = "0.1.0"
description = "Python toolkit for energy AI: load forecasting, NILM, DER optimization, and energy feature engineering"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Muranai", email = "hello@muranai.com" }]
keywords = [
  "energy",
  "forecasting",
  "nilm",
  "smart-grid",
  "load-forecasting",
  "der",
  "v2g",
  "battery",
  "ai",
  "machine-learning",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.9"
dependencies = ["numpy>=1.24", "pandas>=2.0", "scikit-learn>=1.3", "scipy>=1.11"]

[project.optional-dependencies]
forecast = ["lightgbm>=4.0", "statsmodels>=0.14"]
optimize = ["pulp>=2.7"]
datasets = ["requests>=2.28", "tqdm>=4.65"]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=23.0",
  "ruff>=0.1",
  "mypy>=1.5",
  "lightgbm>=4.0",
  "statsmodels>=0.14",
  "requests>=2.28",
  "tqdm>=4.65",
]
all = ["energykit[forecast,optimize,datasets,dev]"]

[project.urls]
Homepage     = "https://github.com/muranai/energykit"
Documentation = "https://energykit.readthedocs.io"
Repository   = "https://github.com/muranai/energykit"
Issues       = "https://github.com/muranai/energykit/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["energykit*"]

[tool.black]
line-length    = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select      = ["E", "F", "I", "N", "W"]
ignore      = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.mypy]
python_version    = "3.9"
warn_return_any   = true
warn_unused_configs = true
